<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/favicon"
            android:title="@string/Fav_Res" />
    </group>

    <item android:title="@string/Action_menu">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/support"
                android:title="@string/support_button" />
            <item
                android:id="@+id/nav_fb_logout"
                android:icon="@drawable/com_facebook_favicon_blue"
                android:title="@string/FB_logout" />
        </menu>
    </item>

</menu>
