<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/usersImageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/FB_Profile_Photo"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@android:color/black" />

    <TextView
        android:id="@+id/usersProfileNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/FB_Profile_Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/usersProfileEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FB_Profile_Email" />

    <TextView
        android:id="@+id/usersProfileIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FB_Profile_ID" />

</LinearLayout>
