<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr.ifasman7.uomandroid.restaurantsworldwideguide.LoginActivity">

    <ImageView
        android:id="@+id/loginImageBG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/login_BG_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_background" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="219dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginImageBG"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/loginImageBG"
        app:layout_constraintTop_toTopOf="@+id/loginImageBG"
        app:layout_constraintVertical_bias="0.637" />

    <Button
        android:id="@+id/loggedINbtn"
        style="@style/com_facebook_loginview_silver_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cont_home_screene"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/loginImageBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.388" />

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="71dp"
        android:layout_height="65dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/info_btn_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggedINbtn"
        app:srcCompat="@drawable/info" />

    <TextView
        android:id="@+id/welcBacktxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="monospace"
        android:text="@string/message_to_loggedin_user"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
