<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/resNameTextView"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/Res_Name"
        android:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/arrowImageView"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resAddressTextView"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/Res_Address"
        app:layout_constraintEnd_toStartOf="@+id/arrowImageView"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/resNameTextView" />

    <TextView
        android:id="@+id/resFoodTypesTextView"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/Res_Food_Types"
        app:layout_constraintEnd_toStartOf="@+id/arrowImageView"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/resAddressTextView" />

    <ImageView
        android:id="@+id/arrowImageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/resFoodTypesTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resNameTextView"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/arrow" />
</android.support.constraint.ConstraintLayout>